Zork\Patcher\Patcher (from webriq/zork package) moved to Grid\Installer

--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=5.4",
-        "webriq/zork": "*"
+        "php": ">=5.4"
     },
     "require-dev": {
         "composer/composer": "*@dev"
